# twitterclone

./: README.md  db.sqlite3  pyproject.toml
authentication/: forms.py  urls.py  views.py
notifications/: models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
templates/: base.html  create_tweet.html  dashboard.html  index.html  login.html  notifications.html  profile.html  register.html  tweet.html
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20200904_1713.py  0003_remove_twitteruser_tweets.py
