[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "This is a small Twitter clone application from Q4 at Kenzie."
authors = ["Diarte Jeffcoat <diartesjeffcoat@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
